test/ifError.slq

def main(f:ğ”¹!â†’ğ”¹,z:ğ”¹){
    y:=0:ğ”¹;
    if H(z){ // error
        y:=H(y);
    }
    return (y,z); // error
}
